force-app/main/default/objects/DocFab_Model_Override__mdt/DocFab_Model_Override__mdt.object-meta.xml
<CustomObject>
    <description>Per-user DocFab record model/form overrides by market unit.</description>
    <label>DocFab Model Override</label>
    <pluralLabel>DocFab Model Overrides</pluralLabel>
</CustomObject>