force-app/main/default/objects/DocFab_Model_Override__mdt/fields/Custom_Permission__c.field-meta.xml
<CustomField>
    <fullName>Custom_Permission__c</fullName>
    <description>Optional custom permission to check before applying this override.</description>
    <label>Custom Permission</label>
    <length>255</length>
    <type>Text</type>
</CustomField>