force-app/main/default/objects/DocFab_Model_Override__mdt/fields/Default_Field_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Default_Field_Configuration__c</fullName>
    <description>Optional fallback field configuration when no user-specific mapping is present.</description>
    <label>Default Field Configuration</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>