force-app/main/default/objects/DocFab_Model_Override__mdt/fields/Field_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Field_Configuration__c</fullName>
    <description>JSON mapping used to prefill DocFab fields (override path).</description>
    <label>Field Configuration</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>