force-app/main/default/objects/DocFab_Model_Override__mdt/fields/Form_UUID_Override__c.field-meta.xml
<CustomField>
    <fullName>Form_UUID_Override__c</fullName>
    <description>Form UUID to use when the running user matches this override (optional).</description>
    <label>Form UUID Override</label>
    <length>255</length>
    <type>Text</type>
</CustomField>