force-app/main/default/objects/DocFab_Model_Override__mdt/fields/Market_Unit__c.field-meta.xml
<CustomField>
    <fullName>Market_Unit__c</fullName>
    <description>Market unit this override applies to.</description>
    <label>Market Unit</label>
    <length>50</length>
    <type>Text</type>
</CustomField>