force-app/main/default/objects/DocFab_Model_Override__mdt/fields/Record_Model_Override__c.field-meta.xml
<CustomField>
    <fullName>Record_Model_Override__c</fullName>
    <description>Record model id to use when the running user matches this override.</description>
    <label>Record Model Override</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>