force-app/main/default/objects/DocFab_Model_Override__mdt/fields/User_Override__c.field-meta.xml
<CustomField>
    <fullName>User_Override__c</fullName>
    <description>Comma separated list of User Ids that should use this override.</description>
    <label>User Override</label>
    <length>255</length>
    <type>Text</type>
</CustomField>